# MR2C

./: .prettierignore  .prettierrc.yaml  README.md  bun.lockb  changelog.txt  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tech_used.txt  vite.config.ts
.github/workflows/: main.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: errorwrap.rs  hook.rs  lib.rs  loader.rs  main.rs  rhai_engine.rs
src-tauri/src/core/: copy_dir.rs  func.rs  image_constant.rs  image_merging.rs  image_replace_at.rs
src-tauri/src/loader/: func.rs  image_constant.rs  image_processing.rs  image_replace_at.rs
src-tauri/tests/: integration_test.rs
src-tauri/tests/mods/testmod/: index.df
src/lib/: README.md  README_ABOUT.md  README_MODDER.md  README_USER.md  app.css  consts.ts  stores.svelte.ts  stores.ts  types.ts
src/routes/: +layout.svelte  +page.svelte  CustomTab.svelte  DarkLightToggle.svelte  SaverLoader.svelte  SaverLoader.ts
src/routes/about/: +page.svelte
src/routes/docs/: DarkLightToggle.svelte  DocsCollapse.svelte  Highlighter.svelte  SideDocs.svelte  SideWrapper.svelte
src/routes/mod/: +page.svelte
src/routes/tools/: +page.svelte
static/archive/: unused.svelte
