[package]
name = "app"
version = "0.2.0"
description = "A Tauri App"
authors = ["Hwang"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.79"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.204", features = ["derive"] }
tauri = { version = "1.7.1", features = ["dialog-open", "fs-all"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

thiserror = "1.0.63"
anyhow = "1.0.86"

image = "0.25.2"
walkdir = "2.5.0"
rhai = { version = "1.19.0", features = [ "no_float", "no_module", "no_function", "no_custom_syntax" ] }

concat-string = "1.0.1"

once_cell = "1.19.0"
indexmap = "2.2.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
